# server_framework

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_x64.bat  build_x86.bat  clear.bat  clear.sh  env.sh  general.bat  general_proto.sh  general_proto_64.bat  general_proto_86.bat
common/: msg.h
config/: login.json  proxy.json  servers.json  servers_template.json
core/: CMakeLists.txt  clear.bat  core.cc  core.h  core_packet_handle.cc  core_packet_handle.h  main.cc
dep/jansson/x64/lib/: jansson.lib
dep/mongoc/include/libbson-1.0/: bson-config.h
dep/mongoc/lib/pkgconfig/: libbson-1.0.pc
dep/mongoc/x64/lib/: bson-1.0.lib  bson-static-1.0.lib  mongoc-1.0.lib  mongoc-static-1.0.lib
dep/mongoc/x86/lib/: bson-1.0.lib  bson-static-1.0.lib  mongoc-1.0.lib  mongoc-static-1.0.lib
dep/mongocxx/x64/include/mongo/: config.h  version.h
dep/mongocxx/x64/include/mongo/base/: error_codes.h
dep/mongocxx/x64/include/mongo/util/net/: sock.h
dep/mongocxx/x64/lib/: mongoclient-gd.exp  mongoclient-gd.lib  mongoclient.exp  mongoclient.lib
login/: CMakeLists.txt  clear.bat  json_login.cc  json_login.h  login.cc  login.h  login_client.cc  login_client.h  login_packet_handle.cc  login_packet_handle.h  main.cc  mongo_unit_login.cc  mongo_unit_login.h  mongo_unit_test.cc  mongo_unit_test.h  mongoc_unit_login.cc  mongoc_unit_login.h  mongoc_unit_test.cc  mongoc_unit_test.h  mongocxx_unit_login.cc  mongocxx_unit_login.h  mongocxx_unit_test.cc  mongocxx_unit_test.h
press_test/: test_client.sh
proto/: common.proto  login.proto  transfer.proto
proxy/: CMakeLists.txt  clear.bat  json_base.h  json_proxy.cc  json_proxy.h  main.cc  proxy.cc  proxy.h  proxy_client.cc  proxy_client.h  proxy_packet_handle.cc  proxy_packet_handle.h  session.cc  session.h  session_wrapper.cc  session_wrapper.h
shutcut/: core1.lnk  core2.lnk  login1.lnk  proxy1.lnk  proxy2.lnk  test_client.lnk
so/: libboost_regex.so.1.49.0  libboost_thread.so.1.49.0
test/: test.cc
test_client/: CMakeLists.txt  clear.bat  client.cc  client.h  client_packet_handle.cc  client_packet_handle.h  connector.cc  connector.h  test_client.cc
